# OpenSkySea-Nexus

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.lite  Doxyfile  README.md  entrypoint.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  question.md
docs/: FAQ.md  HARDWARE_REQUIREMENTS.md  INSTALLATION.md  PERFORMANCE_OPTIMIZATION.md  QUICK_START.md  README.md  RESEARCH_GUIDE.md  ROADMAP.md  TROUBLESHOOTING.md
docs/architecture/: high_level.md
hardware/: README.md
html/: doxygen.css  md_src_2README.html  pages.html
html/search/: pages_0.js  pages_1.js  searchdata.js
latex/: md_src_2README.tex  refman.tex
scripts/: release.py
sim/: README.md
sim/gazebo/: README.md
sim/gazebo/models/quadcopter/: model.config  model.sdf
sim/gazebo/models/rover/: model.config  model.sdf
sim/gazebo/worlds/: simple.world
src/: README.md
src/air/: README.md
src/air/hybrid_controller/: CMakeLists.txt  README.md  package.xml
src/air/hybrid_controller/launch/: hybrid_controller.launch.py  (+1 more)
src/air/hybrid_msgs/: CMakeLists.txt  package.xml
src/ar_mission_control/: CMakeLists.txt  README.md  package.xml
src/ar_mission_control/msg/: GestureCommand.msg  VisualizationData.msg  VoiceCommand.msg
src/ar_mission_control/src/: ar_mission_control_node.cpp
src/collaborative_intelligence/: CMakeLists.txt  README.md  package.xml
src/collaborative_intelligence/msg/: Knowledge.msg
src/collaborative_intelligence/src/: knowledge_sharer_node.cpp
src/collaborative_problem_solving/: CMakeLists.txt  README.md  package.xml
src/collaborative_problem_solving/src/: problem_solver_node.cpp
src/collaborative_problem_solving/srv/: SolveProblem.srv
src/data_analytics/: CMakeLists.txt  README.md  package.xml
src/distributed_learning/: CMakeLists.txt  README.md  package.xml
src/distributed_learning/msg/: LearningModel.msg
src/distributed_learning/src/: distributed_learning_node.cpp
src/environment_modeler/: CMakeLists.txt  README.md  package.xml
src/environment_modeler/msg/: MarineLife.msg  OceanCurrent.msg  Weather.msg
src/environment_modeler/src/: environment_modeler_node.cpp
src/external_control/: CMakeLists.txt  README.md  package.xml
src/external_control/src/: external_control_node.cpp
src/knowledge_database/: CMakeLists.txt  README.md  package.xml
src/knowledge_database/src/: knowledge_database_node.cpp
src/land/: README.md
src/land/rover_controller/: CMakeLists.txt  README.md  package.xml
src/marketplace/: CMakeLists.txt  README.md  package.xml
src/marketplace/src/: marketplace_node.cpp
src/marketplace/srv/: ListModules.srv
src/micro_drone_simulator/: CMakeLists.txt  README.md  package.xml
src/micro_drone_simulator/src/: micro_drone_simulator_node.cpp
src/micro_drone_simulator/srv/: Recharge.srv
src/microplastic_detector/: CMakeLists.txt  README.md  package.xml
src/microplastic_detector/src/: microplastic_detector_node.cpp
src/mission_integrity/: CMakeLists.txt  README.md  package.xml
src/mission_integrity/msg/: MissionLog.msg
src/mission_integrity/src/: mission_logger_node.cpp
src/mission_orchestrator/: CMakeLists.txt  README.md  package.xml
src/mission_orchestrator/msg/: Constraint.msg  Mission.msg  Objective.msg
src/mission_orchestrator/src/: mission_generator_node.cpp
src/multi_channel_msgs/: CMakeLists.txt  package.xml
src/multi_channel_msgs/msg/: MultiChannelMessage.msg
src/multi_channel_stack/: CMakeLists.txt  README.md  package.xml
src/multi_channel_stack/launch/: multi_channel_stack.launch.py
src/multi_channel_stack/src/: multi_channel_stack_node.cpp
src/nexus_communication_protocol/: CMakeLists.txt  README.md  package.xml  translator_plugins.xml
src/nexus_communication_protocol/include/nexus_communication_protocol/: translator_plugin.hpp
src/nexus_communication_protocol/msg/: FollowTrajectory.msg  GoToWaypoint.msg  InspectZone.msg  SetVelocity.msg
src/nexus_communication_protocol/src/: custom_translator.cpp  mavros_translator.cpp  ncp_translator_node.cpp  pypilot_translator.cpp
src/perception_msgs/: CMakeLists.txt  package.xml
src/perception_msgs/msg/: DetectedObject.msg  DetectedObjectList.msg
src/predictive_maintenance/: CMakeLists.txt  README.md  package.xml
src/predictive_maintenance/msg/: ComponentState.msg
src/predictive_maintenance/src/: predictive_maintenance_node.cpp
src/rewards/: CMakeLists.txt  README.md  package.xml
src/rewards/src/: rewards_node.cpp
src/sea/: README.md
src/sea/energy_core/: CMakeLists.txt  README.md  package.xml
src/sea/energy_core/src/: energy_core_node.cpp
src/sea/energy_msgs/: CMakeLists.txt  package.xml
src/sea/energy_prediction_msgs/: CMakeLists.txt  package.xml
src/sea/predictive_energy_manager/: CMakeLists.txt  README.md  package.xml
src/sea/predictive_energy_manager/launch/: predictive_energy_manager.launch.py
src/sea/predictive_energy_manager/src/: predictive_energy_manager_node.cpp
src/sea_simulator/: CMakeLists.txt  README.md  package.xml
src/sea_simulator/launch/: sea_simulator.launch.py
src/sea_simulator/src/: sea_simulator_node.cpp
src/security/: CMakeLists.txt  README.md  package.xml
src/security/src/: secure_node.cpp
src/seeder_boat_simulator/: CMakeLists.txt  README.md  package.xml
src/seeder_boat_simulator/src/: seeder_boat_simulator_node.cpp
src/seeder_boat_simulator/srv/: SowSeeds.srv
src/simple_ui/: CMakeLists.txt  README.md  package.xml
src/simple_ui/src/: simple_ui_node.cpp
src/simulation_bringup/: CMakeLists.txt  package.xml
src/simulation_bringup/launch/: simulation.launch.py
src/sub_simulator/: CMakeLists.txt  README.md  package.xml
src/sub_simulator/src/: sub_simulator_node.cpp
src/vision_hub/: CMakeLists.txt  README.md  package.xml
src/vision_hub/src/: vision_hub_node.cpp
src/vtol_simulator/: CMakeLists.txt  README.md  package.xml
src/vtol_simulator/src/: vtol_simulator_node.cpp
src/vtol_simulator/srv/: DropBuoy.srv
tests/: README.md
(+6 files in other folders)
