<?xml version="1.0"?>
<package format="3">
  <name>simulation_bringup</name>
  <version>0.0.0</version>
  <description>Launch files for the simulation</description>
  <maintainer email="todo@todo.com">TODO</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
