<?xml version="1.0"?>
<package format="3">
  <name>predictive_energy_manager</name>
  <version>0.0.0</version>
  <description>Predictive Energy Manager</description>
  <maintainer email="todo@todo.com">TODO</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>energy_prediction_msgs</depend>
  <depend>energy_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
